# plotly-ocaml

./: README.md  dune-project  plotly.opam
.github/workflows/: build.yml
jsoo/: jsoo.ml  jstools.ml
jsoo/demo/: index.html
python/: python.ml  python.mli
python/demo/: demo.ml
src/: base.ml  base.mli  plotly.ml  plotly.mli
src/demo/: demo.ml
test/: .gitignore  dune  generate_references.ml  test_all.ml
test/references/json/: Bar__Hiding_Legend_for_Single_Trace.json  Hiding_Legend_for_Single_Trace.json  Histogram.json  Pie.json  Scatter_3D.json  Scatter_lines+markers.json  Scatter_lines.json  Scatter_markers.json  Scatter_multi.json  Stacked_Bar,_horizontal.json  Stacked_Bar.json
test/references/jsoo-json/: Bar__Hiding_Legend_for_Single_Trace.json  Bar_with_hoover_texts.json  Data_with_Custom_Axis_Labels.json  Histogram.json  Pie.json  Scatter_3D.json  Scatter_lines+markers.json  Scatter_lines.json  Scatter_markers.json  Scatter_multi.json  Scatter_with_custom_font.json  Scatter_with_hoover_texts.json  Scatter_with_hovertemplate.json  Stacked_Bar,_horizontal.json  Stacked_Bar.json
test/references/python-json/: Bar__Hiding_Legend_for_Single_Trace.json  Bar_with_hoover_texts.json  Data_with_Custom_Axis_Labels.json  Histogram.json  Pie.json  Scatter_3D.json  Scatter_lines+markers.json  Scatter_lines.json  Scatter_markers.json  Scatter_multi.json  Scatter_with_custom_font.json  Scatter_with_hoover_texts.json  Scatter_with_hovertemplate.json  Stacked_Bar,_horizontal.json  Stacked_Bar.json
